Actaulizacion de listas en nav: se agrego una lista llamada Mapas

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li>Home</li>
             <li>Productos</li>
             <li>Contacto</li>
+            <li>Mapas</li>
         </ul>
     </header>
     
