Actualizacion: Se Complemnto el nombre de un item de la lista de navegacion para un mejor entendimineto

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li>Home</li>
             <li>Productos</li>
             <li>Contacto</li>
-            <li>Mapas</li>
+            <li>Mapas: de la ciudad donde nos encontramos</li>
         </ul>
     </header>
     
