Agragando la lista

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </h1>
         <ul>
             <li>Home</li>
-            <li>Productos</li>
+            <li>Productos: de los cuales puedes comprar</li>
             <li>Contacto</li>
             <li>Mapas: de la ciudad donde nos encontramos</li>
         </ul>
