--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="" alt="">
         </h1>
         <ul>
-            <li>Home</li>
+            <li>Home:Casa</li>
             <li>Productos: de los cuales puedes comprar</li>
             <li>Contacto</li>
             <li>Mapas: de la ciudad donde nos encontramos</li>
