--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <li>Home:Casa</li>
             <li>Productos: de los cuales puedes comprar</li>
             <li>Contacto</li>
-            <li>Mapas: de la ciudad donde nos encontramos</li>
+            <li>Mapas: de la ciudad donde nos encontramos </li>
+            <li>Mapa del curso</li>
         </ul>
     </header>
     
