--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Barberia Alura Pro</title>
+    <title>Barberia Alura Pro algo chingon</title>
 </head>
 <body>
 
@@ -18,7 +18,7 @@
             <li>Productos:para limpiar</li>
             <li>Contacto</li>
             <li>Mapas: de la ciudad donde nos encontramos </li>
-            <li>Mapa del curso</li>
+            <li>Mapa del curso:chido</li>
         </ul>
     </header>
     
