--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-
-    <title>Barberia Alura Pro algo chingon</title>
-
-
+    <title>Barberia Pro Alura cambio</title>
 </head>
 <body>
 
