Cambios en la lista de casa

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
         </h1>
         <ul>
 
-            <li>Home</li>
-           <li>Home:Casa</li>
-
+            <li>Home la casa principal</li>
             <li>Productos: de los cuales puedes comprar</li>
             <li>Contacto</li>
             <li>Mapas: de la ciudad donde nos encontramos </li>
