Revert "Cambios en la lista de casa"
This reverts commit c0dbfdec4c126a690649ddfe3ca820e2293cc1b6.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         </h1>
         <ul>
 
-            <li>Home la casa principal</li>
+            <li>Home</li>
+           <li>Home:Casa</li>
+
             <li>Productos: de los cuales puedes comprar</li>
             <li>Contacto</li>
             <li>Mapas: de la ciudad donde nos encontramos </li>
