Modificando el nombre del mapa

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li>Productos: de los cuales puedes comprar</li>
             <li>Contacto</li>
             <li>Mapas: de la ciudad donde nos encontramos </li>
-            <li>Mapa del curso:chido</li>
+            <li>Mapa del curso:chido de la ciudad</li>
         </ul>
     </header>
     
