--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
             <img src="" alt="">
         </h1>
         <ul>
-
-            <li>Home</li>
-           <li>Home:Casa</li>
-
+            <li>Home:Casa principal para regresar</li>
             <li>Productos: de los cuales puedes comprar</li>
             <li>Contacto</li>
-            <li>Mapas: de la ciudad donde nos encontramos </li>
+            <li>Mapas: de la ciudad donde nos encontramos hoy </li>
             <li>Mapa del curso:chido de la ciudad</li>
         </ul>
     </header>
